# embedded-and-real-time-systems

./: .gitmodules  README.md
Project 1/clion project/: CMakeLists.txt  Makefile  README.md  linearregression.c  linearregression.h  main.c  sample_predictive.c  sample_predictive.h  sampling_gettimeofday.c  sampling_gettimeofday.h
Project 2 - Final/report/: report.odt
Project 2 - Final/report/Timeline/: index.html  server.sh  session.html  timeline.css  timeline.js
Project 2 - Final/report/Timeline/Sessions/: session1.json  session2.json  session3.json
Project 2 - Final/report/Timeline/Sessions/bak/: session1.json
Project 2 - Final/report/Timeline/Templates/: Event.handlebars  Message.handlebars  Timeline.handlebars
Project 2 - Final/report/Timeline/stats/: index.html  stats.js
Project 2 - Final/report/Timeline/stats/Templates/: DeviceStats.handlebars  MessageStats.handlebars
Project 2 - Final/report/Timeline/timeline/: index.html  timeline.js
Project 2 - Final/report/WebReport/: index.html  serve.py  server.sh  session.template.json
Project 2 - Final/report/WebReport/Sessions/0001/: session1.json  session2.json
Project 2 - Final/report/WebReport/Sessions/8600/: session1.json  session2.json
Project 2 - Final/report/WebReport/Sessions/9026/: session1.json  session2.json
Project 2 - Final/report/WebReport/stats/: index.html  stats.css  stats.js
Project 2 - Final/report/WebReport/stats/Templates/: Buffer.handlebars  DeviceStats.handlebars  Inbox.handlebars  (+4 more)
Project 2 - Final/report/WebReport/timeline/: index.html  timeline.css  timeline.js
(+2 files in other folders)
